--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,5 +13,6 @@ import(mmand)
 import(patchPlot)
 import(png)
 import(rvest)
-import(scales)
 import(tidyr)
+importFrom(scales,comma_format)
+importFrom(scales,scientific_format)
