--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,11 +8,16 @@ import(downloader)
 import(e1071)
 import(ggplot2)
 import(grid)
-import(jpeg)
 import(mmand)
 import(patchPlot)
-import(png)
+import(readbitmap)
 import(rvest)
 import(tidyr)
+importFrom(dplyr,between)
+importFrom(dplyr,filter)
+importFrom(dplyr,group_by)
+importFrom(dplyr,mutate)
+importFrom(dplyr,select)
+importFrom(dplyr,summarise)
 importFrom(scales,comma_format)
 importFrom(scales,scientific_format)
